--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
     ></iframe>
+    <script src="./script.js"></script>
 </body>
 </html>
